kubernetes/apps/automation/zigbee/app/deployment.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/koenkk/zigbee2mqtt:2.14.2@sha256:addbfb08fcef2e4477de1535636118241e10d13e898fbe4d9faba8a4d7396311
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            tcpSocket:
              port: 80
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: zigbee
