kubernetes/apps/automation/zigbee/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: zigbee
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
